--- a/wiki/many.wikitext
+++ b/wiki/many.wikitext
@@ -19,7 +19,7 @@ Middle English [[manye]], from Old English [[manig]], [[mænig]], from common Ge
 #: ''There are many different ways to define a word''
 
 ==== Translations ====
-*Arabic: [[كَثير]] (kaθiːr)
+*Arabic: [[كثير|كَثِيرٌ]] (kaθíːr)
 *Bulgarian: [[много]] (mnogo)
 *Czech: [[mnoho]]
 *Dutch: [[veel]], [[vele]]
@@ -29,14 +29,14 @@ Middle English [[manye]], from Old English [[manig]], [[mænig]], from common Ge
 *German: [[viele]]
 *Hungarian: [[sok]]
 *Italian: [[molti]]
-*Japanese: [[多くの]] (ōkuno), [[多い]] ([[おおい]], ōi), [[沢山]] (takusán)
-*Persian: [[زياد]] (ziād), [[چَندين]] (čændin)
+*Japanese: [[多くの]] ([[おおくの]], ōkuno), [[多い]] ([[おおい]], ōi), [[沢山]] ([[たくさん]], takusán)
+*Persian: [[زياد]] (ziād), [[چندين|چَندين]] (čændin)
 *Polish: [[wiele]]
 *Portuguese: [[muitos]]
 *Romanian: [[mult]] ''m sg'', [[multă]] ''f sg'', [[mulţi]] ''m pl'', [[multe]] ''f pl''
 *Russian: [[много]] (mnógo)
 *Slovak: [[mnohý]] ''m sg'', [[mnohá]], ''f sg'', [[mnohé]] ''n sg'', [[mnohí]] ''m pl'', [[mnohé]] ''f+n pl''
-*Spanish: [[mucho]] ''m'' ''sing'', [[mucha]] ''f'' ''sing'', [[muchos]] ''m pl'', [[muchas]] ''f pl''
+*Spanish: [[mucho]] ''m sg'', [[mucha]] ''f sg'', [[muchos]] ''m pl'', [[muchas]] ''f pl''
 *Swedish: [[många]]
 
 === Noun ===
