--- a/wiki/%E7%BD%AE.wikitext
+++ b/wiki/%E7%BD%AE.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#place, lay out
-*# set aside
+*# [[place]], [[lay]] out
+*# [[set]] aside
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -31,11 +31,28 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': ji3
 
+===Compounds===
+*[[置办]]
+*[[置备]]
+*[[置辩]]
+*[[置放]]
+*[[置换]]
+*[[置买]]
+*[[置评]]
+*[[置若罔闻]]
+*[[置身]]
+*[[置身事外]]
+*[[置信]]
+*[[置疑]]
+*[[置之不理]]
+*[[置之度外]]
+*[[置之脑后]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ち]] (chi)
