--- a/wiki/Kiev.wikitext
+++ b/wiki/Kiev.wikitext
@@ -1,4 +1,6 @@
+==English==
 ===Proper noun===
+'''Kiev'''
 
 #The capital of [[Ukraine]]
 
@@ -12,3 +14,4 @@
 *Italian: [[Kijev]]
 *Japanese: [[キエフ]]
 *[[Russian]]: [[Киев]] ''m''
+*Ukrainian: [[Київ]]
