--- a/wiki/narrative.wikitext
+++ b/wiki/narrative.wikitext
@@ -11,11 +11,10 @@
 
 ===Adjective===
 '''narrative'''
-# Telling a story through a medium other than speech.
-# Being overly talkative; [[garrulous]].
-
+# Telling a story 
+ 
 ====Related terms====
-*[[narrate]] n
+*[[narrate]] v
 *[[narrator]] n
 
 ====Translations====
