--- a/wiki/%D1%97.wikitext
+++ b/wiki/%D1%97.wikitext
@@ -1,6 +1,6 @@
 ==Letter==
 
-# Ukrainian Cyrillic letter representing /ji/
+#The thirteenth letter of the Ukrainian Cyrillic alphabet representing /ji/
 
 ===See also===
 *[[ï]]
