--- a/wiki/dugong.wikitext
+++ b/wiki/dugong.wikitext
@@ -16,6 +16,7 @@
 
 ====Translations====
 *[[Italian]]: [[dugongo]] ''m''
+*[[Russian]]: [[дюгонь]]
 *[[Kala Lagaw Ya]]: [[dhangal]]
 *[[Meryam Mir]]: [[deger]]
 
