/* See also */ en: link to w: link <American Samoa#3214>

--- a/wiki/American_Samoa.wikitext
+++ b/wiki/American_Samoa.wikitext
@@ -29,4 +29,4 @@
 
 ===See also===
 *[[Countries of the world]]
-*[[en:American Samoa|Wikipedia article on American Samoa]]
+*[[w:American Samoa|Wikipedia article on American Samoa]]
