--- a/wiki/harry.wikitext
+++ b/wiki/harry.wikitext
@@ -7,6 +7,15 @@
 ===Etymology===
 Variant form of '''[[Henry]]'''
 
-===Related Terms===
+====Related Terms====
 * [[Henry]]
 * [[Harriet]]
+
+===Verb===
+'''harry''', '''[[harries]]''', '''[[harrying]]''', '''[[harried]]'''
+
+# [[bother]], [[disturb]], [[trouble]]
+
+====Synonyms====
+*[[bother]]
+*[[trouble]]
