--- a/wiki/silva.wikitext
+++ b/wiki/silva.wikitext
@@ -1,6 +1,6 @@
 ==Latin==
 ===Noun===
-'''silva, [[Wiktionary Appendix:Latin first declension|silvae]]''' ''f''
+'''silva, [[Wiktionary Appendix:Latin first declension|silvae]]''', ''f''
 
 #[[wood]]s, [[forest]]
 ====Related Words====
@@ -10,3 +10,4 @@
 *[[sylv-]]
 *[[sylvain]]
 *[[sylvan]]
+*[[sylvanus]]
