--- a/wiki/generic.wikitext
+++ b/wiki/generic.wikitext
@@ -5,3 +5,5 @@ Latin ''[[genus]]'', ''[[generis]]'', race, kind: compare French ''[[générique
 ===Adjective===
 #''(Biology):'' Pertaining to a genus or kind; relating to a genus, as distinct from a species, or from another genus; as, a '''generic''' description; a '''generic''' difference; a '''generic''' name.
 #Very comprehensive; pertaining or appropriate to large classes or their characteristics; -- opposed to '''specific'''
+
+[[es:Genérico]]
