--- a/wiki/newspaper.wikitext
+++ b/wiki/newspaper.wikitext
@@ -17,13 +17,13 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *[[Breton]]: [[kazetenn]] ''f'' -où ''plural''
-*[[Catalan]]: [[diari]] ''m'', [[periòdic]] ''m''
+*[[Catalan]]: [[diari]] ''m'' [[:ca:diari|(ca)]], [[periòdic]] ''m''
 *Dutch: [[krant]] ''f'', [[nieuwsblad]] ''n''
 *Estonian: [[leht]]
 *Finnish: [[lehti]]
 *French: [[journal]] ''m'' (''plural'' '''[[journaux]]''')
 *Galician: [[xornal]] ''m'' (''plural'' '''[[xornais]]''')
-*German: [[Zeitung]] ''f''
+*German: [[Zeitung]] ''f'' [[:de:Zeitung|(de)
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
