--- a/wiki/newspaper.wikitext
+++ b/wiki/newspaper.wikitext
@@ -23,7 +23,7 @@
 *Finnish: [[lehti]]
 *French: [[journal]] ''m'' (''plural'' '''[[journaux]]''')
 *Galician: [[xornal]] ''m'' (''plural'' '''[[xornais]]''')
-*German: [[Zeitung]] ''f'' [[:de:Zeitung|(de)
+*German: [[Zeitung]] ''f'' [[:de:Zeitung|(de)]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
