--- a/wiki/Earthling.wikitext
+++ b/wiki/Earthling.wikitext
@@ -8,5 +8,6 @@
 *[[terrestrial]]
 
 ====Translations====
+*Finnish: [[maan asukas]]
 *Russian: [[землянин]] ''m'', ''[[житель]] [[Земля|Земли]]'' ''m''
 *Spanish: [[terr&iacute;cola]]
