+fi, sv; dewikify <farmer#37059>

--- a/wiki/farmer.wikitext
+++ b/wiki/farmer.wikitext
@@ -8,17 +8,19 @@
 ==== Translations ====
 
 *[[Basque]]: [[nekazari]]
-* Danish: [[landmand]] ''c''
-*[[Bulgarian]]: [[фермер]] ''m'', [[земеделец]] ''m''
-*[[Czech]]: [[rolník]], [[sedlák]], [[zemědělec]], [[farmář]]  ''m''
-*[[Dutch]]:  [[boer]] ''m'', [[boerin]] ''f'', [[landbouwer]] ''m'', [[veehouder]] ''m''
-*[[French]]: [[fermier]] ''m''
-*[[German]]: [[Bauer]] ''m'' (crops), [[Züchter]] ''m'' (livestock)
-*[[Italian]]: [[agricoltore]] ''m'', [[fattore]] ''m''
-*[[Latin]]: [[agricola]] ''m''
-*[[Portuguese]]: [[fazendeiro]] ''m''
-*[[Russian]]: [[крeстянин]],  [[фeрмeр]]  ''m''
-*[[Slovak]]: [[roľník]], [[sedliak]], [[poľnohospodár]], [[farmár]]  ''m''
+*Danish: [[landmand]] ''c''
+*Bulgarian: [[фермер]] ''m'', [[земеделец]] ''m''
+*Czech: [[rolník]], [[sedlák]], [[zemědělec]], [[farmář]]  ''m''
+*Dutch:  [[boer]] ''m'', [[boerin]] ''f'', [[landbouwer]] ''m'', [[veehouder]] ''m''
+*Finnish: [[maanviljelijä]] (1), [[farmari]] (1)
+*French: [[fermier]] ''m''
+*German: [[Bauer]] ''m'' (crops), [[Züchter]] ''m'' (livestock)
+*Italian: [[agricoltore]] ''m'', [[fattore]] ''m''
+*Latin: [[agricola]] ''m''
+*Portuguese: [[fazendeiro]] ''m''
+*Russian: [[крeстянин]],  [[фeрмeр]]  ''m''
+*Slovak: [[roľník]], [[sedliak]], [[poľnohospodár]], [[farmár]]  ''m''
+*Swedish: [[bonde]] ''c''
 
 ====Related words====
 
