--- a/wiki/cease.wikitext
+++ b/wiki/cease.wikitext
@@ -19,3 +19,11 @@ Via French from perfect passive participle ''[[cessus]]'', from ''[[cedere]]''
 ====Translations====
 *French: [[cesser]] de + ''infinitive'', s'[[arrêter]] de + ''infinitive''
 *Italian: [[smettere]] di + ''infinitive''
+*{{en}}: [[:en:cease|cease]]
+*{{fr}}: [[:fr:cesser|cesser]]
+*{{hu}}: [[:hu:abbahagy|abbahagy]]
+*{{de}}: [[:de:aufhören|aufhören]]
+*{{it}}: [[:it:cessare|cessare]]
+*{{ro}}: [[:ro:a întrerupe|a întrerupe]]
+*{{es}}: [[:es:dejar de|dejar de]]
+*{{sv}}: [[:sv:upphöra|upphöra]]
