--- a/wiki/skier.wikitext
+++ b/wiki/skier.wikitext
@@ -4,6 +4,7 @@
 # Someone who practices [[ski|skiing]]. 
 
 ====Translations====
+*Finnish: [[hiihtäjä]]
 *French: [[skieur]] ''m'', [[skieuse]] ''f''
 *German: [[Skifahrer]] ''m'', [[Skifahrerin]] ''f''
 *{{hu}}: [[síelő]]
