+fi, sv, de corrected <dentist#66528>

--- a/wiki/dentist.wikitext
+++ b/wiki/dentist.wikitext
@@ -7,12 +7,14 @@ Latin ''[[dens]]'', [[-ist]]
 
 ====Translations====
 *Chinese: [[牙医]] (yayi)
+*Finnish: [[hammaslääkäri]] (1)
 *French: [[dentiste]] 
-*German: [[Zahnartz]] 
+*German: [[Zahnarzt]] ''m''
 *{{hu}}: [[fogorvos]]
 *Italian: [[dentista]]
 *Japanese: [[歯医者]] (haisha), [[歯科医]]
 *Spanish: [[dentista]]
+*Swedish: [[tandläkare]] ''c'' (1)
 
 ===Related terms===
 *[[dental]]
