--- a/wiki/tax.wikitext
+++ b/wiki/tax.wikitext
@@ -24,6 +24,15 @@
 #*French: [[impôt]], [[impôt sur le revenu]] (''note'': in this meaning ''taxe'' is a [[false friend]])
 #*Japanese: [[税]] (zei), [[税金]] (zeikin)
 #*Romanian: [[taxă]] ''f'', [[impozit]] ''n''
+*{{en}}: [[:en:tax|tax]]
+*{{fr}}: [[:fr:impôt|impôt]]
+*{{hu}}: [[:hu:adó|adó]]
+*{{de}}: [[:de:Steuer|Steuer]]
+*{{it}}: [[:it:tassa|tassa]]
+*{{ro}}: [[:ro:impozit|impozit]]
+*{{es}}: [[:es:impuesto|impuesto]]
+*{{sv}}: [[:sv:skatt|skatt]]
+
 #VAT, sales tax
 #*Dutch:[[BTW]]
 #*Finnish:[[ALV]], [[arvonlisävero]]
