--- a/wiki/wisdom.wikitext
+++ b/wiki/wisdom.wikitext
@@ -18,7 +18,7 @@ From '''[[wise]]''' + noun of state suffix '''[[-dom]]''', equivalent to ''[[-ne
 *Dutch: [[wijsheid]]
 *Finnish: [[viisaus]]
 *French: [[sagesse]]
-*German: [[klugheit]]
+*German: [[Klugheit]], [[Weisheit]]
 *[[Hebrew]]: [[חכמה]] /hohma/
 *Indonesian: [[kebijaksanaan]]
 *[[Italian]]: [[saggezza]]
