--- a/wiki/unmarried.wikitext
+++ b/wiki/unmarried.wikitext
@@ -15,3 +15,11 @@
 *German: unverheiratet
 *Russian: хoлoстoй,  (noun) хoлoстяк ''m''
 *Slovak: slobodný, neženatý ''m'',  slobodná, nevydatá ''f''
+*{{en}}: [[:en:unmarried|unmarried]]
+*{{fr}}: [[:fr:célibataire|célibataire]]
+*{{hu}}: [[:hu:agglegény|agglegény]]
+*{{de}}: [[:de:Junggeselle|Junggeselle]]
+*{{it}}: [[:it:scapolone|scapolone]]
+*{{ro}}: [[:ro:burlac|burlac]]
+*{{es}}: [[:es:soltero|soltero]]
+*{{sv}}: [[:sv:ungkarl|ungkarl]]
