--- a/wiki/worry.wikitext
+++ b/wiki/worry.wikitext
@@ -5,6 +5,6 @@ noun
 *{{hu}}: [[:hu:aggodalom|aggodalom]]
 *{{de}}: [[:de:Sorge|Sorge]]
 *{{it}}: [[:it:preoccupazione|preoccupazione]]
-*{{ro}}: [[:ro:preocupación|preocupación]]
-*{{es}}: [[:es:teamă|teamă]]
+*{{ro}}: [[:es:teamă|teamă]]
+*{{es}}: [[:ro:preocupación|preocupación]]
 *{{sv}}: [[:sv:bekymmer|bekymmer]]
