--- a/wiki/lamb.wikitext
+++ b/wiki/lamb.wikitext
@@ -18,6 +18,7 @@
 *Finnish: [[karitsa]]
 *French: [[agneau]] ''m''
 *German: [[Lamm]] ''n''
+*{{hu}}: [[:hu:bárány|bárány]]
 *Italian: [[agnello]] ''m'', (''baby lamb'') [[agnellino]] ''m'' (1)
 |}
 | width=1% |
