--- a/wiki/%CE%B8%CE%AC%CE%BB%CE%B1%CF%83%CF%83%CE%B1.wikitext
+++ b/wiki/%CE%B8%CE%AC%CE%BB%CE%B1%CF%83%CF%83%CE%B1.wikitext
@@ -1,5 +1,11 @@
 ==Greek==
+===Pronunciation===
+
+thalassa (THAH-lah-sah)
 ===Noun===
 '''θάλασσα''' ''f''
 
-# [[sea]]
+*English: [[sea]]
+*French: [[mer]]
+*Italian: [[mare]]
+*Latin: [[mare]]
