--- a/wiki/clay.wikitext
+++ b/wiki/clay.wikitext
@@ -11,6 +11,7 @@
 *French: [[argile]] ''m''
 *German: [[Lehm]] ''m'', [[Ton#German|Ton]] ''m''
 *Greek: [[άργιλος]] ''m''
+*{{hu}}: [[:hu:agyag|agyag]]
 *Italian: [[argilla]] ''f''
 *Japanese: [[粘土]]
 *Korean: [[찰흙]]
