+fi; dewikify <coup d'état#47223>

--- a/wiki/coup_d%27%C3%A9tat.wikitext
+++ b/wiki/coup_d%27%C3%A9tat.wikitext
@@ -11,21 +11,22 @@ French, "stroke of state".
 ====Translations====
 *[[Chinese]] (simplified): [[政变]]
 *Chinese (traditional): [[政變]]
-*[[Danish]]: [[Statskup]]
-*[[Dutch]]: [[staatsgreep]]
-*[[French]]: coup d'état ''m''
-*[[German]]: [[Putsch]]
-*[[Greek]]: [[πραξικόπημα]] ''n'' (praxikópima)
-*[[Italian]]: [[colpo di stato]] ''m''
-*[[Japanese]]: [[クーデター]] (kūdetā)
-*[[Korean]]: [[불시의 일격]]
+*Danish: [[Statskup]]
+*Dutch: [[staatsgreep]]
+*Finnish: [[vallankaappaus]]
+*French: coup d'état ''m''
+*German: [[Putsch]]
+*Greek: [[πραξικόπημα]] ''n'' (praxikópima)
+*Italian: [[colpo di stato]] ''m''
+*Japanese: [[クーデター]] (kūdetā)
+*Korean]]: [[불시의 일격]]
 *[[Latin]]: [[eversio reipublicae]] ''nominative singular'', [[eversionis reipublicae]] ''genitive singular'', [[eversiones rerumpublicarum]] ''nominative plural'', [[eversionum rerumpublicarum]] ''genitive plural''
-*[[Polish]]: [[Zamach stanu]]
-*[[Portuguese]]: [[golpe de estado]]
+*Polish: [[Zamach stanu]]
+*Portuguese: [[golpe de estado]]
 *[[Romanica]]: [[colpo de stato]] ''m''
-*[[Russian]]: [[Путч]]
-*[[Spanish]]: [[golpe de estado]]
-*[[Swedish]]: [[Statskupp]]
+*Russian: [[Путч]]
+*Spanish: [[golpe de estado]]
+*Swedish: [[Statskupp]]
 
 ===See also===
 *[[w:Coup d'état|Wikipedia article on coups d'état]]
