--- a/wiki/suggest.wikitext
+++ b/wiki/suggest.wikitext
@@ -22,6 +22,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*Finnish: [[ehdottaa]]
 *French: [[proposer#French|proposer]], [[suggérer]]
 *Italian: [[proporre]], [[suggerire]]
 |}
