--- a/wiki/facsimile.wikitext
+++ b/wiki/facsimile.wikitext
@@ -1,11 +1,17 @@
 ==Etymology==
-From Latin phrase '''"[[fac]] [[simile]]"''', literally ''"make like"'', from '''[[fac]]''', ''make'', imperative of '''[[facere]]''', ''[[make]]'', + '''[[simile]]''', ''[[like]]'' or ''[[similar]]''
+From Latin phrase '''"[[fac]] [[simile]]"''', literally ''"make like"'', from '''[[fac]]''', ''make'', imperative of '''[[facere]]''', ''[[make]]'', + '''[[simile]]''', neuter of [[similis]] ''[[like]]'' or ''[[similar]]''
 
 ===Noun===
 '''facsimile''', plural '''[[facsimiles]]'''
 
-# copy or [[reproduction]]
-# [[fax]] (short for ''facsimile''); a machine for making and sending copies of printed material and images
+# A copy or [[reproduction]]
+# [[fax]] (short for ''facsimile''); a machine for making and sending copies of printed material and images via radio or telephone network
+====Synonyms====
+#[[autotype]]
+#[[fax]], [[facsimile machine]]
 
-===Synonyms===
-*[[fax]]
+===Verb===
+'''to facsimile'''
+#Send via a facsimile machine
+====Synonyms====
+#[[fax]], [[telefax]]
