--- a/wiki/facsimile.wikitext
+++ b/wiki/facsimile.wikitext
@@ -2,7 +2,7 @@
 From Latin phrase '''"[[fac]] [[simile]]"''', literally ''"make like"'', from '''[[fac]]''', ''make'', imperative of '''[[facere]]''', ''[[make]]'', + '''[[simile]]''', neuter of [[similis]] ''[[like]]'' or ''[[similar]]''
 
 ===Noun===
-'''facsimile''', plural '''[[facsimiles]]'''
+'''facsimile''', plural '''facsimiles'''
 
 # A copy or [[reproduction]]
 # [[fax]] (short for ''facsimile''); a machine for making and sending copies of printed material and images via radio or telephone network
