--- a/wiki/newspaper.wikitext
+++ b/wiki/newspaper.wikitext
@@ -20,7 +20,7 @@
 *[[Catalan]]: [[diari]] ''m'' [[:ca:diari|(ca)]], [[periòdic]] ''m''
 *Dutch: [[krant]] ''f'', [[nieuwsblad]] ''n''
 *Estonian: [[leht]]
-*Finnish: [[lehti]]
+*Finnish: [[sanomalehti]], [[lehti]]
 *French: [[journal]] ''m'' (''plural'' '''[[journaux]]''')
 *Galician: [[xornal]] ''m'' (''plural'' '''[[xornais]]''')
 *German: [[Zeitung]] ''f'' [[:de:Zeitung|(de)]]
@@ -48,6 +48,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Dutch: [[krantenpapier]] ''n''
+*Finnish: [[sanomalehtipaperi]]
 *German: [[Zeitungspapier]] ''n''
 *Persian: [[كاغذ روزنامه]] (kaghaz-e ruznameh) 
 |}
@@ -76,6 +77,7 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Finnish: [[sanomalehti]]- (''in compounds'')
 *{{msg:de}}: [[Zeitung]]s-
 |}
 | width=1% |
@@ -92,6 +94,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Dutch: [[krantenpapieren-]], ... van krantenpapier
+*Finnish: [[sanomalehti]]- (''in compounds'')
 *German: [[Zeitungspapier-]], ... aus Zeitungspapier
 |}
 | width=1% |
