/* See also */ <ton#38847>

--- a/wiki/ton.wikitext
+++ b/wiki/ton.wikitext
@@ -87,10 +87,11 @@ The translations below need to be checked by native speakers and inserted into t
 ====See also====
 *[[w:en:ton|Wikipedia article on the ton]]
 *[[long ton]]
-*[[metric ton]]
+*[[metric ton]] (tonne)
 *[[short ton]]
 
 ----
+
 ==Dutch==
 ===Noun===
 '''ton''' ''f'' (Plural: [[tonnen]], diminutive: [[tonnetje]])
