--- a/wiki/d%27oh.wikitext
+++ b/wiki/d%27oh.wikitext
@@ -5,7 +5,7 @@
 *[[do]] (''music''), [[doe]], [[doh]], [[dough]]
 
 ===Etymology===
-[[Popularise]]d by the cartoon character [[w:Homer Simpson|Homer Simpson]], abbreviated from the drawn-out "do-o-oh!" sound made by the characters played by [http://imdb.com/name/nm0278006/ Jim Finlayson] in the films of [[w:Laurel and Hardy|Laurel and Hardy]].
+[[Popularise]]d by the cartoon character [[w:Homer Simpson|Homer Simpson]] in ''The Simpsons''. Abbreviated from the drawn-out "do-o-oh!" sound made by the characters played by [http://imdb.com/name/nm0278006/ Jim Finlayson] in the films of [[w:Laurel and Hardy|Laurel and Hardy]]. The original brief for the sound in ''The Simpsons'' scripts was "ANNOYED GRUNT", and this is how it is still rendered in the show's scripts.
 
 ===Interjection===
 '''d'oh!'''
