--- a/wiki/merkin.wikitext
+++ b/wiki/merkin.wikitext
@@ -2,7 +2,8 @@
 ===Noun===
 '''merkin''' ([[merkins]])
 
-# A 17th century term for a [[pubic]] [[wig]]. Worn for nude stage appearances and by women after shaving their privates to eliminate lice.
+# A 17th century term for a [[pubic]] [[wig]]. Worn for nude stage appearances and by women after shaving their privates to eliminate [[lice]].
+# A [[slang]] term for [[Americans]], generally considered [[offensive]].
 
 ===See also===
 *[[codpiece]]
