incorrect syntax on Wiktionarian... heh. <Wiktionarian#9832>

--- a/wiki/Wiktionarian.wikitext
+++ b/wiki/Wiktionarian.wikitext
@@ -1,8 +1,9 @@
+==English==
 ===Etymology===
 Neologism, from [[wiktionary]]
 
 ===Noun===
-Person that uses and, especially, contributes to [[wiktionary]].
+#Person that uses and, especially, contributes to [[wiktionary]].
 
 ===Translations===
 *Esperanto: [[Vikivortaristo]]
