--- a/wiki/worry.wikitext
+++ b/wiki/worry.wikitext
@@ -1,5 +1,8 @@
-noun
-
+==English==
+===Noun===
+#A cause of [[anxiety]]; a source of [[unhappiness]].
+#A strong [[feeling]] of anxiety.
+====Translation====
 *{{en}}: [[:en:worry|worry]]
 *{{fr}}: [[:fr:souci|souci]]
 *{{hu}}: [[:hu:aggodalom|aggodalom]]
@@ -8,3 +11,7 @@ noun
 *{{ro}}: [[:es:teamă|teamă]]
 *{{es}}: [[:ro:preocupación|preocupación]]
 *{{sv}}: [[:sv:bekymmer|bekymmer]]
+===Verb===
+#To be troubled by something.
+#To be [[concern]]ed about, to [[care]].
+#Disturb the [[peace of mind]] of; afflict with mental [[agitation]] or [[distress]].
