--- a/wiki/noctilucent.wikitext
+++ b/wiki/noctilucent.wikitext
@@ -1,3 +1,3 @@
-'''[[Adjective]]'''
-
-Luminous at night, esp. said of certain high clouds.
+==English==
+===Adjective===
+#Luminous at night, especially said of certain high clouds.
