/* See also */ <todger#65647>

--- a/wiki/todger.wikitext
+++ b/wiki/todger.wikitext
@@ -6,4 +6,5 @@
 # Colloquial name for a human penis (used in Australia, thought to be used in UK)
 
 ===See also ===
+[[penis]]
 [[WikiSaurus:Penis]]
