<worth one's while#66556>

--- a/wiki/worth_one%27s_while.wikitext
+++ b/wiki/worth_one%27s_while.wikitext
@@ -1,5 +1,5 @@
 =={{En}}==
-===[[adjective]]===
+===Adjective===
 #Good and important enough for one to spend time, effort, or money on. 
 #:''Doing volunteer work to help others is truly '''worth one's while'''.''
 
