--- a/wiki/never-never_land.wikitext
+++ b/wiki/never-never_land.wikitext
@@ -1,3 +1,5 @@
-'''Never Never Land''' is often used to refer generally to a fantastic or imaginary place - one is said to be "off in never never land" when one is coming up with completely impractical ideas, distracted, etc. It is frequently mistakenly confused with [[Neverland]], a fictional island in [[J.M. Barrie]]'s [[Peter Pan]].
+The name '''Never Never Land''' often refers generally to a fantastic or imaginary place - one is said to be "off in never never land" when one is coming up with completely impractical ideas, distracted, etc. "Going to Never Never Land" can also mean going to sleep, or, more darkly, dying.
 
-Going to Never Never Land can also mean going to sleep, or, more darkly, dying.
+It is frequently mistakenly confused with [[Neverland]], a fictional island in [[J.M. Barrie]]'s ''[[Peter Pan]]''.
+
+Compare also "the [[Never-Never]]" as a term referring to remoter parts of the [[Australia]]n [[outback]].
