/* Synonyms */ *See [[WikiSaurus:corpse]], [[WikiSaurus:body]] <cadaver#41012>

--- a/wiki/cadaver.wikitext
+++ b/wiki/cadaver.wikitext
@@ -18,6 +18,7 @@ ca-dav-er
 : a dead body; especially that of a human to be dissected.
 
 ====Synonyms====
+*See [[WikiSaurus:corpse]], [[WikiSaurus:body]]
 *[[body]]
 *[[corpse]]
 
