/* See also */*See [[WikiSaurus:corpse]] <mummy#48472>

--- a/wiki/mummy.wikitext
+++ b/wiki/mummy.wikitext
@@ -23,6 +23,7 @@ From Middle English [[mummie]], from Old French [[momie]], from Medieval Latin [
 *[[mummify]]
 
 ====See also====
+*See [[WikiSaurus:corpse]]
 *[[w:Mummy|Wikipedia article on mummies]]
 
 ===Etymology===
