--- a/wiki/mummy.wikitext
+++ b/wiki/mummy.wikitext
@@ -23,7 +23,7 @@ From Middle English [[mummie]], from Old French [[momie]], from Medieval Latin [
 *[[mummify]]
 
 ====See also====
-*See [[WikiSaurus:corpse]]
+*[[WikiSaurus:corpse]]
 *[[w:Mummy|Wikipedia article on mummies]]
 
 ===Etymology===
