/* Noun */ *see [[WikiSaurus:sexual intercourse]] <copulation#61903>

--- a/wiki/copulation.wikitext
+++ b/wiki/copulation.wikitext
@@ -1,8 +1,11 @@
 ==English==
 
-===Noun===
+==Noun==
 
 '''copulation'''
 
 #The act of coupling or joining; union; conjunction.
 #The coming together of male and female in the act of generation; sexual union; coition.
+
+===Synonyms===
+*see [[WikiSaurus:sexual intercourse]]
