--- a/wiki/screw.wikitext
+++ b/wiki/screw.wikitext
@@ -26,6 +26,7 @@
 #(''slang'') to cheat or treat unfairly.  In combining this sense with the usage as a synonym for sexual intercourse, ''screw'' follows [[fuck]].
 
 ====Synonyms====
+*see [[WikiSaurus:sexual intercourse]] (2)
 *[[fuck]] (''taboo slang'') (2, 3)
 *[[root]] (''Aus'') (2)
 *[[shag]] (''UK'') (2)
