/* Noun */ #The act of screwing, as in 'to have a good screw', as in [[sexual intercourse]] <screw#32947>

--- a/wiki/screw.wikitext
+++ b/wiki/screw.wikitext
@@ -4,6 +4,10 @@
 #A (usually) metal fastener consisting of a conical, threaded tip, possibly a cylindrical, threaded body, and possibly an unthreaded cylindrical portion between the threaded part the the larger head; it is twisted directly into a solid piece of softer material, or into a pre-drilled hole slightly smaller than the outside diameter of the threads.
 #A ship's propeller.
 #A prison guard.
+#The act of screwing, as in 'to have a good screw', as in [[sexual intercourse]]
+
+====Synonyms====
+*see [[WikiSaurus:sexual intercourse]] (4)
 
 ====Derived terms====
 *[[screwdriver]]
