--- a/wiki/shag.wikitext
+++ b/wiki/shag.wikitext
@@ -6,6 +6,11 @@ From Old English ''sceacga'', ''sceaga'' ([[coppice]]), related to Old Norse ''s
 ====Noun====
 #a [[cormorant]], especially with a crest
 #a type of carpet pile
+#the act of shagging, as in "have a good shag", as in [[sexual intercourse]]
+#a person treated as a object of the act of shagging, as in "she's a good shag"
+
+=====Synonyms=====
+*see [[WikiSaurus:sexual intercourse]]
 
 ===Etymology===
 Unknown origin ([[circa|c.]] 18th Century)
