/* Transitive verb */ see [[WikiSaurus:sexual intercourse]] <shag#58354>

--- a/wiki/shag.wikitext
+++ b/wiki/shag.wikitext
@@ -17,4 +17,7 @@ Unknown origin ([[circa|c.]] 18th Century)
 
 ====Transitive verb====
 ''to shag'' (shagged, shagging)
-#(''British, course'') to have [[sexual intercourse]] with someone
+#(''British, course'') to have [[sexual intercourse]] with someone willing, or as an action upon someone unwilling.
+
+=====Synonyms=====
+see [[WikiSaurus:sexual intercourse]]
