--- a/wiki/root.wikitext
+++ b/wiki/root.wikitext
@@ -21,7 +21,7 @@
 *(2): [[basis]], [[origin]], [[source]]
 *(4): [[zero]]
 *(6): [[etymon]]
-*(7): [[screw]] (''US''), [[shag]] (''British'')
+*(8 vulgar slang): [[screw]] (''US''), [[shag]] (''British'') - see [[WikiSaurus:sexual intercourse]]
 
 ==== Translations ====
 *Bulgarian: [[корен]] (koren)
