/* Synonyms */ See [[WikiSaurus:sexual intercourse]] <root#39505>

--- a/wiki/root.wikitext
+++ b/wiki/root.wikitext
@@ -48,7 +48,7 @@
 #:Note: This word is somewhat milder than ''[[fuck]]'' but still quite coarse.
 
 ====Synonyms====
-*[[screw]] (''US''), [[shag]] (''British'')
+*[[screw]] (''US''), [[shag]] (''British'') - See [[WikiSaurus:sexual intercourse]]
 
 === Related terms ===
 *[[square root]]
