--- a/wiki/ostracize.wikitext
+++ b/wiki/ostracize.wikitext
@@ -9,3 +9,5 @@ transitive verb
 
  
 2. banish: to banish somebody by a popular vote because that person is regarded as dangerous to society, as was the practice in ancient Greece
+
+*definition from dictionary.msn.com http://encarta.msn.com/dictionary_/ostracize.html
