Gujarati: [[ભારત]] <India#2357>

--- a/wiki/India.wikitext
+++ b/wiki/India.wikitext
@@ -25,6 +25,7 @@ From Latin '''[[India]]''', derived from '''[[Indus]]''', the Indus River. '''In
 *German: [[Indien]] ''n''
 *Greek, Ancient: [[Ἰνδία]] (India) ''f''
 *Greek, Modern: [[Ινδία]] (India) ''f'' 
+*Gujarati: [[ભારત]]
 *Hebrew: [[הודו]] (Hodu)
 *Hindi: [[भारत]] (bhārata)
 *Hungarian: [[India]]
