--- a/wiki/infidel.wikitext
+++ b/wiki/infidel.wikitext
@@ -1,6 +1,7 @@
 ==English==
 ===Etymology===
-From Latin [[infidelis]], ''unfaithful''.
+First attested [[w:1460|1460]], from [[Latin]] [[infidelis]] ''unfaithful,'' from [[in-]] ''not'' + [[fidelis]] ''faithful'' (see [[fidelity]]).
+
 ===Noun===
 '''infidel''' ''n''
 
