--- a/wiki/%E3%81%93%E3%81%86.wikitext
+++ b/wiki/%E3%81%93%E3%81%86.wikitext
@@ -21,62 +21,15 @@
 # [[孔]]: [[hole]], [[cavity]]
 # [[公]]: [[prince]], [[lord]]; [[public]]
 # [[甲]]: [["A"]], [[first]], the [[former]], the [[one]]; [[shell]], [[armor]], [[back]] of the hand, [[tortoise shell]], [[crab]] shell; [[instep]]; the [[back]]
-# [[巧]]:
 # [[功]]:
-# [[広]]:
-# [[弘]]:
-# [[后]]:
-# [[向]]:
-# [[行]]:
-# [[仰]]:
-# [[好]]:
-# [[考]]:
-# [[交]]:
 # [[光]]:
 # [[江]]:
-# [[孝]]:
-# [[攻]]:
-# [[更]]:
-# [[抗]]:
-# [[坑]]:
-# [[宏]]:
-# [[肯]]:
-# [[幸]]:
-# [[効]]:
-# [[拘]]:
-# [[香]]:
-# [[郊]]:
-# [[厚]]:
-# [[侯]]:
-# [[荒]]:
-# [[紅]]:
-# [[恒]]:
-# [[皇]]:
-# [[洪]]:
-# [[晃]]:
-# [[貢]]:
-# [[耕]]:
-# [[航]]:
-# [[校]]:
-# [[候]]:
-# [[降]]:
-# [[高]]:
-# [[浩]]:
-# [[控]]:
-# [[黄]]:
-# [[康]]:
-# [[絞]]:
-# [[硬]]:
-# [[慌]]:
-# [[港]]:
-# [[項]]:
+# [[香]]: [[incense]]
+# [[校]]: (''prefix'') [[school]]
+# [[項]]: [[section]], [[member]], [[term]]
 # [[鉱]]:
-# [[綱]]:
-# [[構]]:
-# [[酵]]:
+# [[綱]]: (''bioology'') [[class]]
 # [[稿]]:
-# [[鋼]]:
+# [[鋼]]: [[steel]]
 # [[衡]]:
-# [[興]]:
-# [[講]]:
 # [[購]]:
