--- a/wiki/tema.wikitext
+++ b/wiki/tema.wikitext
@@ -1,8 +1,20 @@
 ==Italian==
 ===Noun===
-'''tema''' ''m'' ([[temi]])
+'''tema''' ''m'' (plural: [[temi]])
 
-# [[theme]]
+# [[theme]], [[subject]]
+#(''lingustics'') [[stem]]
+
+====Related terms====
+*[[tematico]]
+
+===Noun===
+'''tema''' ''f''
+
+# [[fear]]
+
+====Related terms====
+*[[temere]]
 
 ----
 
