--- a/wiki/hyponym.wikitext
+++ b/wiki/hyponym.wikitext
@@ -1,18 +1,19 @@
+==English==
 === Noun ===
-'''hyponym'''
+'''hyponym''' ([[hyponyms]])
 
 #A hyponym of A is a word B that is more specific than A (compare with [[hypernym]]). That is to say that you may call B A but not the [[reverse]]. 
 
-===Examples===
-
+====Examples====
 * [[dog]] is hyponym of [[animal]]. Indeed, all dogs are animals but all animals are not dogs.
 * [[Spanish]] is a hyponym of [[European]]
 * [[rectangle]] is a hyponym [[square]]
 
-=== See also ===
-[[en:hyponym|Wikipedia article on hyponyms]]
-
-=== Translations ===
-*[[Dutch]]: [[hyponiem]] ''n''
+==== Translations ====
+*Dutch: [[hyponiem]] ''n''
 *[[Esperanto]]: [[hiponimo]]
-*[[French]]: [[hyponyme]] ''m''
+*French: [[hyponyme]] ''m''
+
+=== See also ===
+*[[hypernym]]
+*[[w:hyponym|Wikipedia article on hyponyms]]
