/* Translations */ wikification <India#2357>

--- a/wiki/India.wikitext
+++ b/wiki/India.wikitext
@@ -14,20 +14,20 @@ From Latin '''[[India]]''', derived from '''[[Indus]]''', the Indus River. '''In
 
 ====Translations====
 *[[Bosnian]]: Indija ''f''
-*Breton: India
+*[[Breton]]: India
 *Chinese: [[印度]] (yìndù)
 *Danish: [[Indien]]
 *Dutch: India
-*Esperanto: [[Barato]], [[Hindujo]], [[Hindio]], [[Bharato]], [[Hinda Unio]]
+*[[Esperanto]]: [[Barato]], [[Hindujo]], [[Hindio]], [[Bharato]], [[Hinda Unio]]
 *Estonia: India
 *Finnish: [[Intia]]
 *French: [[Inde]] ''f''
 *German: [[Indien]] ''n''
 *Greek, Ancient: [[Ἰνδία]] (India) ''f''
 *Greek, Modern: [[Ινδία]] (India) ''f'' 
-*Gujarati: [[ભારત]]
+*[[Gujarati]]: [[ભારત]]
 *Hebrew: [[הודו]] (Hodu)
-*Hindi: [[भारत]] (bhārata)
+*[[Hindi]]: [[भारत]] (bhārata)
 *Hungarian: [[India]]
 *Indonesian: India
 *[[Interlingua]]: India
