+rus <crude oil#687>

--- a/wiki/crude_oil.wikitext
+++ b/wiki/crude_oil.wikitext
@@ -1,15 +1,16 @@
 ==[[noun]]==
 # Unrefined [[oil]]; as it is found in the ground.
 
-===[[Translation]]s===
-*[[Dutch]]: [[ruwe olie]] ''f'', [[aardolie]] ''f''
-*[[French]]: [[pétrole brute]]
-*[[Frisian]]: [[ierdoalje]]
-*[[German]]: [[Rohöl]] ''n''
-*[[Indonesian]]: [[minyak]] [[mentah]]
-*[[Japanese]]: [[原油]] (げんゆ, gen-yu)
-*[[Korean]]: [[원유]] [原油] (wonyu)
-*[[Spanish]]: [[crudo]]
+===Translations===
+*Dutch: [[ruwe olie]] ''f'', [[aardolie]] ''f''
+*French: [[pétrole brute]]
+*Frisian: [[ierdoalje]]
+*German: [[Rohöl]] ''n''
+*Indonesian: [[minyak]] [[mentah]]
+*Japanese: [[原油]] (げんゆ, gen-yu)
+*Korean: [[원유]] [原油] (wonyu)
+*Russian: [[сырая нефть]], [[неочищенная нефть]] ''f''
+*Spanish: [[crudo]]
 
 === See also ===
 * [[petroleum]]
