makeover <crude oil#687>

--- a/wiki/crude_oil.wikitext
+++ b/wiki/crude_oil.wikitext
@@ -1,5 +1,5 @@
-==[[noun]]==
-# Unrefined [[oil]]; as it is found in the ground.
+==Noun==
+#Unrefined [[oil]]; as it is found underground, consisting mainly of [[hydrocarbon]]s
 
 ===Translations===
 *Dutch: [[ruwe olie]] ''f'', [[aardolie]] ''f''
@@ -12,9 +12,9 @@
 *Russian: [[сырая нефть]], [[неочищенная нефть]] ''f''
 *Spanish: [[crudo]]
 
-=== See also ===
+===See also===
 * [[petroleum]]
 * [[crude]]
 
-=== Further Reading ===
+===Further reading===
 * [[w:crude oil|Wikipedia article on crude oil]]
