synonyms <crude oil#687>

--- a/wiki/crude_oil.wikitext
+++ b/wiki/crude_oil.wikitext
@@ -12,9 +12,12 @@
 *Russian: [[сырая нефть]], [[неочищенная нефть]] ''f''
 *Spanish: [[crudo]]
 
-===See also===
-* [[petroleum]]
-* [[crude]]
+===Synonyms===
+*[[crude]]
+*[[crude oil]]
+*[[fossil oil]]
+*[[petroleum]]
+*[[rock oil]]
 
 ===Further reading===
 * [[w:crude oil|Wikipedia article on crude oil]]
