fmt <crude oil#687>

--- a/wiki/crude_oil.wikitext
+++ b/wiki/crude_oil.wikitext
@@ -1,10 +1,19 @@
-==Noun==
+==English==
+===Noun===
+'''[[crude]] [[oil]]''' (''uncountable'')
+
 #Unrefined [[oil]]; as it is found underground, consisting mainly of [[hydrocarbon]]s
 
-===Translations===
+====Synonyms====
+*[[crude]]
+*[[fossil oil]]
+*[[petroleum]]
+*[[rock oil]]
+
+====Translations====
 *Dutch: [[ruwe olie]] ''f'', [[aardolie]] ''f''
 *French: [[pétrole brute]]
-*Frisian: [[ierdoalje]]
+*[[Frisian]]: [[ierdoalje]]
 *German: [[Rohöl]] ''n''
 *Indonesian: [[minyak]] [[mentah]]
 *Japanese: [[原油]] (げんゆ, gen-yu)
@@ -12,11 +21,5 @@
 *Russian: [[сырая нефть]], [[неочищенная нефть]] ''f''
 *Spanish: [[crudo]]
 
-===Synonyms===
-*[[crude]]
-*[[fossil oil]]
-*[[petroleum]]
-*[[rock oil]]
-
-===Further reading===
+===See also===
 * [[w:crude oil|Wikipedia article on crude oil]]
