/* Translations */ wikify ko hanja <crude oil#687>

--- a/wiki/crude_oil.wikitext
+++ b/wiki/crude_oil.wikitext
@@ -17,7 +17,7 @@
 *German: [[Rohöl]] ''n''
 *Indonesian: [[minyak]] [[mentah]]
 *Japanese: [[原油]] (げんゆ, gen-yu)
-*Korean: [[원유]] [原油] (wonyu)
+*Korean: [[원유]] ([[原油]], wonyu)
 *Russian: [[сырая нефть]], [[неочищенная нефть]] ''f''
 *Spanish: [[crudo]]
 
