proper linking <sea change#66617>

--- a/wiki/sea_change.wikitext
+++ b/wiki/sea_change.wikitext
@@ -12,4 +12,4 @@ Into something rich and strange."''</pre>
 ===Translations===
 *Russian:[[полное изменение]] ''n'', [[полная трансформация]] ''f''
 ===Further reading===
-[[http://www.worldwidewords.org/qa/qa-sea1.htm|World Wide Words on ''sea change'']]
+World Wide Words on ''sea change'' [http://www.worldwidewords.org/qa/qa-sea1.htm]
