--- a/wiki/sea_change.wikitext
+++ b/wiki/sea_change.wikitext
@@ -1,12 +1,13 @@
 ==English==
 ===Etymology===
 Phrase '''sea change''' was coined by [[Shakespeare]], from [[Ariel]]'s song in "[[The Tempest]]".
-<pre>''"Full fathom five thy father lies:
+<pre>"Full fathom five thy father lies:
 Of his bones are coral made:
 Those are pearls that were his eyes:
 Nothing of him that doth fade
 But doth suffer a sea-change
-Into something rich and strange."''</pre>
+Into something rich and strange."</pre>
+
 ===Noun===
 #Profound [[transformation]].
 ===Translations===
