--- a/wiki/Dominica.wikitext
+++ b/wiki/Dominica.wikitext
@@ -6,24 +6,26 @@
 ===Translations===
 *[[Bosnian]]: Dominika ''f''
 *[[Breton]]: [[Dominica]]
-*[[Chinese]]: [[多米尼加]]
+*Chinese: [[多米尼加]]
 *[[Danish]]: Dominica
 *[[Dutch]]: Dominica
 *[[Esperanto]]: [[Dominiko]]
-*[[Finnish]]: Dominica
-*[[French]]: [[Dominique]]
-*[[German]]: Dominica
-*[[Greek]]: [[Ντομίνικα]], [[Δομίνικα]]
-*[[Hungarian]]: [[Doninikai Közösség]], [[Dominika]]
+*Finnish: Dominica
+*French: [[Dominique]]
+*German: Dominica
+*Greek: [[Ντομίνικα]], [[Δομίνικα]]
+*Hungarian: [[Doninikai Közösség]], [[Dominika]]
 *[[Interlingua]]: Dominica
-*[[Italian]]: Dominica
-*[[Japanese]]: [[ドミニカ]] (dominika)
-*[[Polish]]: [[Dominika]]
-*[[Portuguese]]: [[Domínica]]
-*[[Romanian]]: [[Dominica]] ''f''
-*[[Russian]]: [[Доминика]]
-*[[Spanish]]: Dominica
-*[[Swedish]]: Dominica
-*[[Turkish]]: [[Dominika]]
+*Italian: Dominica
+*Japanese: [[ドミニカ]] (dominika)
+*Polish: [[Dominika]]
+*Portuguese: [[Domínica]]
+*Romanian: [[Dominica]] ''f''
+*Russian: [[Доминика]]
+*Spanish: Dominica
+*Swedish: Dominica
+*Turkish: [[Dominika]]
 
-''See'': [[Countries of the world]]
+===See also===
+*[[Countries of the world]]
+*[[Dominican Republic]]
