--- a/wiki/%E3%81%93%E3%81%86.wikitext
+++ b/wiki/%E3%81%93%E3%81%86.wikitext
@@ -20,15 +20,15 @@
 # [[工]]: [[work]], [[craft]], [[art]], [[skill]]; [[workman]], [[artisan]]
 # [[孔]]: [[hole]], [[cavity]]
 # [[公]]: [[prince]], [[lord]]; [[public]]
-# [[甲]]: [["A"]], [[first]], the [[former]], the [[one]]; [[shell]], [[armor]], [[back]] of the hand, [[tortoise shell]], [[crab]] shell; [[instep]]; the [[back]]
-# [[功]]:
-# [[光]]:
-# [[江]]:
+# [[甲]]: "[[A]]", [[first]], the [[former]], the [[one]]; [[shell]], [[armor]], [[tortoise shell]], [[crab]] shell; [[back]] of the hand; [[instep]]; the [[back]]
+# [[功]]: [[efficiency]], [[merit]], [[distinguished]] [[service]]s, [[achievement]], [[success]], [[exploit]], [[honor]], [[credit]]
+# [[光]]: [[light]], [[ray]], [[beam]]; [[radiance]], [[brilliance]], [[brightness]]; [[shine]], [[flash]], [[gleam]], [[glitter]], [[glimmer]], [[twinkle]], [[sparkle]], [[glow]], [[luster]], [[gloss]]
+# [[江]]: [[river]], [[creek]]; [[inlet]], [[bay]]
 # [[香]]: [[incense]]
 # [[校]]: (''prefix'') [[school]]
 # [[項]]: [[section]], [[member]], [[term]]
 # [[鉱]]:
-# [[綱]]: (''bioology'') [[class]]
+# [[綱]]: (''biology'') [[class]]
 # [[稿]]:
 # [[鋼]]: [[steel]]
 # [[衡]]:
