--- a/wiki/dentale.wikitext
+++ b/wiki/dentale.wikitext
@@ -8,3 +8,15 @@
 '''dentale''' ''f''
 
 #(''linguistics'') [[dental]] consonant
+
+----
+
+==Italian==
+===Adjective===
+'''dentale''' ''m'', '''[[dentali]]''' ''plural''
+
+#(''linguistics'') [[dental]]
+
+===Related terms===
+*[[dentario]]
+*[[dente]]
