--- a/wiki/statue.wikitext
+++ b/wiki/statue.wikitext
@@ -7,3 +7,5 @@ From Latin [[statua]] (statue), derived from Latin [[statuere]] (to set up or er
 ===Derived words===
 *[[Statuelike]]
 *[[Statuesque]]
+{{-trans-}}
+*{{nl}}: [[standbeeld]]
