inbeelden > verbeelden <picture#4067>

--- a/wiki/picture.wikitext
+++ b/wiki/picture.wikitext
@@ -24,7 +24,7 @@
 #to make such a picture, either for real or in one´s head.
 
 ====Translations====
-*[[Dutch]]: [[inbeelden]]
+*[[Dutch]]: [[verbeelden]]
 *[[Finnish]]: [[kuvitella]]
 *[[French]]: [[]]
 
