--- a/wiki/sea_change.wikitext
+++ b/wiki/sea_change.wikitext
@@ -5,7 +5,7 @@ Phrase '''sea change''' was coined by [[Shakespeare]], from [[Ariel]]'s song in 
 Of his bones are coral made:
 Those are pearls that were his eyes:
 Nothing of him that doth fade
-But doth suffer a sea-change
+But doth suffer a '''sea-change'''
 Into something rich and strange."</pre>
 
 ===Noun===
