--- a/wiki/spike.wikitext
+++ b/wiki/spike.wikitext
@@ -8,3 +8,6 @@
 #Anything resembling such a nail in shape.
 #An ear of corn or grain.
 #A kind of flower cluster in which sessile flowers are arranged on an unbranched elongated axis.
+
+====Translations====
+*Finnish: [[piikki]] (1)
