+Estonian; fi derived & format <puu#44520>

--- a/wiki/puu.wikitext
+++ b/wiki/puu.wikitext
@@ -1,7 +1,27 @@
+==Estonian==
+
+===Noun===
+'''puu''' (''genitive singular'' '''puu''')
+
+# [[tree]]
+# [[wood]]
+
+----
+
 ==Finnish==
 ([[Wiktionary:Finnish_index_p|index P]])
 
 ===Noun===
+'''puu'''
 
-# [[tree]] ''kasvava puu''
-# [[wood]] (material) ''puu materiaalina''
+# [[tree]] 
+#: ''kasvava puu'' "growing tree"
+# [[wood]] (''material'') 
+#: ''puu materiaalina'' "wood as a material"
+
+====Derived terms====
+*[[puinen]]
+*[[puisto]]
+*[[puite]]
+*[[puitteet]]
+*[[puusto]]
