--- a/wiki/cease.wikitext
+++ b/wiki/cease.wikitext
@@ -9,6 +9,7 @@ Via French from perfect passive participle ''[[cessus]]'', from ''[[cedere]]''
 #:''And with that, his twitching ceased.''
 
 ====Translations====
+*Finnish: [[loppua]] (1), [[päättyä]] (1)
 *French: [[cesser]], [[arrêter]]
 *Italian: [[smettersi]]
 
@@ -17,6 +18,7 @@ Via French from perfect passive participle ''[[cessus]]'', from ''[[cedere]]''
 #:''And with that, he ceased [[twitch]]ing.''
 
 ====Translations====
+*Finnish: [[lopettaa]] (1), [[lakata]] (1)
 *French: [[cesser]] de + ''infinitive'', s'[[arrêter]] de + ''infinitive''
 *Italian: [[smettere]] di + ''infinitive''
 *{{en}}: [[:en:cease|cease]]
