--- a/wiki/shergottite.wikitext
+++ b/wiki/shergottite.wikitext
@@ -4,7 +4,8 @@
 From the city of Shergotty India, where the first specimen was found in 1865.
 
 ===Pronunciation===
-IPA: [[WEAE]] /ˌʃɚ.gəˈtaɪt/
+*IPA: [[WEAE]] /ˌʃɚ.gəˈtaɪt/
+*SAMPA: /%S@g@"taIt/
 
 ===Noun===
 A type of meteorite composed of lava from a planet other than Earth.  See [http://geology.about.com/library/bl/images/blshergottite.htm geology.about.com article] for more information.
