+fi; sv corrected <unmarried#37050>

--- a/wiki/unmarried.wikitext
+++ b/wiki/unmarried.wikitext
@@ -9,17 +9,17 @@
 *[[married]]
 
 ====Translations====
-
 *Bulgarian: [[неженен]] ''m'', [[неомъжена]] ''f''
 *Czech:   svobodný, neženatý ''m'',  svobodná, nevdaná ''f''
-*German: unverheiratet
-*Russian: хoлoстoй,  (noun) хoлoстяк ''m''
-*Slovak: slobodný, neženatý ''m'',  slobodná, nevydatá ''f''
+*Finnish: [[naimaton]] (1), [[vapaa]] (1)
+*German: [[unverheiratet]]
 *{{en}}: [[:en:unmarried|unmarried]]
 *{{fr}}: [[:fr:célibataire|célibataire]]
 *{{hu}}: [[:hu:agglegény|agglegény]]
 *{{de}}: [[:de:Junggeselle|Junggeselle]]
 *{{it}}: [[:it:scapolone|scapolone]]
 *{{ro}}: [[:ro:burlac|burlac]]
+*Russian: хoлoстoй,  (noun) хoлoстяк ''m''
+*Slovak: slobodný, neženatý ''m'',  slobodná, nevydatá ''f''
 *{{es}}: [[:es:soltero|soltero]]
-*{{sv}}: [[:sv:ungkarl|ungkarl]]
+*{{sv}}: [[ogift]]
