--- a/wiki/root.wikitext
+++ b/wiki/root.wikitext
@@ -25,6 +25,7 @@
 
 ==== Translations ====
 *Bulgarian: [[корен]] (koren)
+*Catalan: [[arrel]] ''f'' [[:ca:arrel|(ca)]] 
 *Czech: [[kořen]]
 *Dutch: [[wortel]]
 *Finnish: [[juuri]]
