+fi, et; sv gender <clay#57306>

--- a/wiki/clay.wikitext
+++ b/wiki/clay.wikitext
@@ -8,6 +8,8 @@
 *Chinese: [[黏土]]
 *Danish: [[ler]]
 *Dutch: [[klei]] ''de''
+*Estonian: [[savi#Estonian|savi]]
+*Finnish: [[savi#Finnish|savi]]
 *French: [[argile]] ''m''
 *German: [[Lehm]] ''m'', [[Ton#German|Ton]] ''m''
 *Greek: [[άργιλος]] ''m''
@@ -18,7 +20,7 @@
 *Portuguese: [[argila]] ''f''
 *Russian: [[глина]] ''f'' (glina)
 *Spanish: [[arcilla]] ''f''
-*Swedish: [[lera]]
+*Swedish: [[lera]] ''c''
 
 ===See also===
 *[[w:Clay|Wikipedia article on clay]]
