translations: +fi <peace of mind#66587>

--- a/wiki/peace_of_mind.wikitext
+++ b/wiki/peace_of_mind.wikitext
@@ -1,8 +1,13 @@
 ==English==
+
 ===Noun phrase===
+
 #The absence of mental stress or anxiety.
-===Synonyms===
-*[[Peace]]
-*[[Peacefulness]]
-*[[Serenity]]
-*[[Repose]]
+====Synonyms====
+*[[peace]]
+*[[peacefulness]]
+*[[serenity]]
+*[[repose]]
+
+====Translations====
+*Finnish: [[mielenrauha]]
