+fi,sv, de <corpse#41371>

--- a/wiki/corpse.wikitext
+++ b/wiki/corpse.wikitext
@@ -4,8 +4,11 @@
 '''Latin''' [[corpus]]"'''body'''"
 
 ====Translations====
+*Finnish: [[raato]] (1), [[ruumis]] (1)
+*German: [[Leiche]] ''f''
 *Lithuanian: [[lavonas]] ''m''
 *Russian: [[труп]] ''m''
+*Swedish: [[lik#Swedish|lik]] ''n'', [[kadaver]] ''n''
 
 ====Synonyms====
 see [[WikiSaurus:corpse]]
