--- a/wiki/mummy.wikitext
+++ b/wiki/mummy.wikitext
@@ -11,6 +11,7 @@ From Middle English [[mummie]], from Old French [[momie]], from Medieval Latin [
 *Danish: [[mumie#Danish|mumie]]
 *Dutch: [[mummie]]
 *[[Esperanto]]: [[mumio]]
+*Finnish: [[muumio]] (1)
 *French: [[momie]] ''f''
 *German: [[Mumie#German|Mumie]]
 *Italian: [[momia]] ''f''
@@ -39,6 +40,7 @@ Diminutive of '''[[mum]]''', related to '''[[mom]]''' and '''[[mommy]]''', from 
 
 ====Translations====
 *Czech: [[máma]] ''f''
+*Finnish: [[äiti]] (1), [[mami#Finnish|mami]] (1), [[mutsi]] (1)
 *French: [[maman]] ''f''
 *Italian: [[mamma#Italian|mamma]] ''f''
 *Latin: [[mamma]] ''f''
