translations: +fi <copulation#61903>

--- a/wiki/copulation.wikitext
+++ b/wiki/copulation.wikitext
@@ -1,11 +1,14 @@
 ==English==
 
-==Noun==
+===Noun===
 
 '''copulation'''
 
 #The act of coupling or joining; union; conjunction.
 #The coming together of male and female in the act of generation; sexual union; coition.
 
-===Synonyms===
+====Synonyms====
 *see [[WikiSaurus:sexual intercourse]]
+
+====Translations====
+*Finnish: [[liittäminen]] (1), [[yhtyminen]] (1), [[parittelu]] (2)
