+fi, some sv <screw#32947>

--- a/wiki/screw.wikitext
+++ b/wiki/screw.wikitext
@@ -15,12 +15,14 @@
 
 ====Translations====
 *Dutch: [[schroef]] ''f'' (1,2), [[vijs]] (1)
+*Finnish: [[ruuvi]] (1), [[potkuri]] (2), [[propelli]] (2), [[vartija]] (3, ''standard''), [[pano#Finnish|pano]] (4), [[nussinta]] (4)
 *French: [[vis]] ''f'' (1)
 *German: [[Schraube]] ''f'' (1,2)
 *Italian: [[vite]] ''f'' (1)
 *Portuguese: [[parafuso]] ''m'' (1)
 *Romanian: [[şurub]] ''n'' (1)
 *Spanish: [[tornillo]] ''m'' (1)
+*Swedish: [[skruv]] ''c'' (1), [[propeller]] ''c'' (2)
 
 ===Transitive verb===
 '''to screw''' ([[screws]], [[screwed]], [[screwing]])
