--- a/wiki/twink.wikitext
+++ b/wiki/twink.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-Shortened rom [[Twinkie]]
+Shortened from [[Twinkie]]
 
 ===Noun===
 '''twink''' (''plural'' '''twinks''')
