+fi <crude oil#687>

--- a/wiki/crude_oil.wikitext
+++ b/wiki/crude_oil.wikitext
@@ -12,6 +12,7 @@
 
 ====Translations====
 *Dutch: [[ruwe olie]] ''f'', [[aardolie]] ''f''
+*Finnish: [[raakaöljy]]
 *French: [[pétrole brute]]
 *[[Frisian]]: [[ierdoalje]]
 *German: [[Rohöl]] ''n''
