--- a/wiki/%D7%A9.wikitext
+++ b/wiki/%D7%A9.wikitext
@@ -1,5 +1,7 @@
 ===Letter===
 '''&#1513;''' (spelled ''[[shin]]'') is the twentyfirst letter of the [[Hebrew]] alphabet.
+:'''&#1513;&#1473;''' is shin, representing /&#643;/, /S/
+:'''&#1513;&#1474;''' is sin, representing /s/
 
 * '''Last''': [[&#1512;]]
 * '''Next''': [[&#1514;]]
