--- a/wiki/sea_change.wikitext
+++ b/wiki/sea_change.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-Phrase '''sea change''' was coined by [[Shakespeare]], from [[Ariel]]'s song in "[[The Tempest]]".
+Phrase '''sea change''' was coined by [[w:Shakespeare|Shakespeare]], from [[Ariel]]'s song in "[[w:The Tempest|The Tempest]]".
  "Full fathom five thy father lies:
  Of his bones are coral made:
  Those are pearls that were his eyes:
