fi: +synoynms, derived <panna#43456>

--- a/wiki/panna.wikitext
+++ b/wiki/panna.wikitext
@@ -2,19 +2,33 @@
 ([[Wiktionary:Finnish_index_p|index P]])
 
 ===Verb===
-:'''panna'''
-# [[put]] (1, 2), [[fuck#Verb|fuck]] (1, 2)
+'''panna'''
+
+# [[put]] (1, 2)
+# (''vulgar'') [[fuck#Verb|fuck]] (1, 2)
+# [[deposit]] (''money'')
+
+====Synonyms====
+*(''put'') [[laittaa]], [[asettaa]], [[pistää]]
+*(''fuck'') [[naida]], [[nussia]], [[bylsiä]]
+
+====Derived terms====
+*[[paneskella]]
+*[[panettaa]]
+*[[pano]]
+*[[panos]]
+*[[suuhunpantava]]
 
 ===Noun===
-:'''panna'''
-# [[ban]] (law, clerical)
+'''panna'''
+# [[ban]] (''law, clerical'')
 
 ------
 
 ==Italian==
 
 ===Noun===
-:'''panna''' ''f''
+'''panna''' ''f''
 # [[cream]]
 
 ------
@@ -22,17 +36,19 @@
 ==Slovak==
 
 ===Noun===
-: '''panna''' ''f''
+'''panna''' ''f''
+
 # [[female]] [[virgin]]
 
 ===See Also===
-:[[panic]]
+*[[panic]]
 
 ------
 
 ==Swedish==
 
 ===Noun===
-:'''panna''' ''c'' (''pl'' pannor, ''def. sing'' pannan, ''def. pl.'' pannorna)
+'''panna''' ''c'' (''pl'' pannor, ''def. sing'' pannan, ''def. pl.'' pannorna)
+
 #[[forehead]]
 #[[pan]]
