--- a/wiki/polite.wikitext
+++ b/wiki/polite.wikitext
@@ -1,5 +1,5 @@
 ===Adjective===
-#good mannered, friendly, civilized
+#good [[mannered]], [[friendly]], [[civilized]]
 
 ===Translations===
 *Finnish: [[kohtelias]]
