--- a/wiki/picture.wikitext
+++ b/wiki/picture.wikitext
@@ -6,27 +6,27 @@
 
 ====Translations====
 
-*[[Dutch]]: [[schilderij]] ''n'' (1), [[prent]] ''f'' (1), [[afbeelding]] ''f'' (1), [[portret]] ''n'' (1), [[illustratie]] ''f'' (1), [[film]] ''m'' (3), [[foto]] ''m'' (2)
-*[[Finnish]]: [[kuva]] (1), [[valokuva]] (2), [[elokuva]] (3)
-*[[French]]: [[image]] ''f'' (1), [[photo]] ''m'' (2), [[cinéma]] ''m'' (3)
-*[[German]]: [[Bild]] ''n'' (1), [[Foto]] ''n'' (2), [[Kino]] ''n'' (3)
-*[[Hebrew]]: [[תמונה]] ''f''
-*[[Indonesian]]: [[gambar]] / [[lukis|lukisan]] (1), [[foto]] / [[potret]] (2), [[film]] (3)
+*Dutch: [[schilderij]] ''n'' (1), [[prent]] ''f'' (1), [[afbeelding]] ''f'' (1), [[portret]] ''n'' (1), [[illustratie]] ''f'' (1), [[film]] ''m'' (3), [[foto]] ''m'' (2)
+*Finnish: [[kuva]] (1), [[valokuva]] (2), [[elokuva]] (3)
+*French: [[image]] ''f'' (1), [[photo]] ''m'' (2), [[cinéma]] ''m'' (3)
+*German: [[Bild]] ''n'' (1), [[Foto]] ''n'' (2), [[Kino]] ''n'' (3)
+*Hebrew: [[תמונה]] ''f''
+*Indonesian: [[gambar]] / [[lukis|lukisan]] (1), [[foto]] / [[potret]] (2), [[film]] (3)
 *[[Interlingua]]: [[imagine]] (1), [[photo]] (2), [[cinema]] (3)
-*[[Japanese]]: [[絵]] (え, e) (1), [[写真]] (しゃしん, shashin) (2), [[フィルム]] (firumu) (3)
-*[[Portuguese]]: [[figura]] ''f'' (1), [[imagem]] ''f'' (1), [[fotografia]] ''f'' (2), [[filme]] ''m'' (3)
-*[[Romanian]]: [[imagine]] ''n'' (1), [[fotografie]] ''f'' (2), poză ''f'' (1,2), [[cinema]] ''n'' (3)
-*[[Slovene]]: [[podoba]] ''f'' (1), [[slika]] ''f'' (1,2), [[fotografija]] ''f'' (2), [[film]] ''m'' (3)
-*[[Spanish]]: [[imagen]] ''f'' (1), [[cuadro]] (1), [[foto]] ''f'' (2), [[fotografia]] ''f'' (2), [[cine]] ''m''(3)
+*Japanese: [[絵]] (え, e) (1), [[写真]] (しゃしん, shashin) (2), [[フィルム]] (firumu) (3)
+*Portuguese: [[figura]] ''f'' (1), [[imagem]] ''f'' (1), [[fotografia]] ''f'' (2), [[filme]] ''m'' (3)
+*Romanian: [[imagine]] ''n'' (1), [[fotografie]] ''f'' (2), poză ''f'' (1,2), [[cinema]] ''n'' (3)
+*Slovene: [[podoba]] ''f'' (1), [[slika]] ''f'' (1,2), [[fotografija]] ''f'' (2), [[film]] ''m'' (3)
+*Spanish: [[imagen]] ''f'' (1), [[cuadro]] (1), [[foto]] ''f'' (2), [[fotografia]] ''f'' (2), [[cine]] ''m''(3)
 
 === Verb ===
 
 #to make such a picture, either for real or in one´s head.
 
 ====Translations====
-*[[Dutch]]: [[verbeelden]]
-*[[Finnish]]: [[kuvitella]]
-*[[French]]: [[]]
+*Dutch: [[verbeelden]]
+*Finnish: [[kuvitella]]
+*French: [[]]
 
 ===Related Terms===
 *[[picture-perfect]]
